--- a/android-27/Dockerfile
+++ b/android-27/Dockerfile
@@ -5,11 +5,11 @@ FROM openjdk:8
 ENV ANDROID_HOME /usr/local/android-sdk
 ENV PATH $ANDROID_HOME/tools/bin:$PATH
 
-# Download SDK tools
-RUN wget https://dl.google.com/android/repository/sdk-tools-linux-3859397.zip
-
 # Install Android SDK
 RUN \
+  wget https://dl.google.com/android/repository/sdk-tools-linux-3859397.zip && \
   unzip sdk-tools-linux-3859397.zip -d $ANDROID_HOME && \
   rm -rf sdk-tools-linux-3859397.zip && \
-  echo y | sdkmanager "build-tools;27.0.2" "platforms;android-27"
+  mkdir ~/.android && touch ~/.android/repositories.cfg && \
+  yes | sdkmanager --licenses && \
+  sdkmanager "build-tools;27.0.2" "platforms;android-27"
